[project]
name = "order-producer"
version = "0.1.0"
description = "Order event producer with edge case injection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka[avro]>=2.3.0",
    "fastavro>=1.9.3",
    "faker>=22.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

